--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -126,7 +126,7 @@ en:
       uploaded_image:
         file: Image
       team:
-        slug: Slug
+        slug: Team URL
       source:
         name: Name
       contact:
@@ -677,7 +677,9 @@ en:
   smooch_requests_asc: Least requested
   smooch_requests_desc: Most requested
   bot_request_url_invalid: The bot URL is invalid
-  smooch_twitter_success: Success! Now the DMs received by this Twitter account will be handled by the Smooch Bot.
+  smooch_twitter_success: Success! Now the DMs received by this Twitter account will
+    be handled by the Smooch Bot.
+  invalid_task_answer: Sorry, the format of this task answer is not valid
   custom_message_smooch_bot_ask_for_confirmation_caio-bot-garden-refactoring: Please
     confirm with "1".
   custom_message_smooch_bot_message_confirmed_caio-bot-garden-refactoring: Thanks,
@@ -715,4 +717,34 @@ en:
     The message you shared with us was wrongly marked as *%{status}*. It is still
     in our queue for further verification."'
   custom_message_smooch_bot_ask_for_tos_checkpoint: Hello and plz read %{tos}
-  invalid_task_answer: Sorry, the format of this task answer is not valid
+  custom_message_smooch_bot_result_reverso: 'Este pedido que nos hiciste ya fue verificado
+    y nos dio %{status}. Acá te pasamos el link a la verificación: %{url}'
+  custom_message_smooch_bot_result_changed_reverso: "El mensaje que nos enviaste fue
+    incorrectamente tratado como %{previous_status}. \n\nEste pedido que nos hiciste
+    ya fue verificado y nos dio %{status}. Acá te pasamos el link a la verificación:
+    %{url}"
+  custom_message_smooch_bot_ask_for_confirmation_reverso: |
+    Hola, cómo va?
+
+    Gracias por enviarnos este mensaje.
+
+    ¿Sospechás que se trata de una desinformación relacionada con las elecciones?
+
+    Si tu respuesta es sí, por favor respondenos con el número 1.
+  custom_message_smooch_bot_message_confirmed_reverso: |-
+    Muchas gracias. Tu colaboración nos ayuda a combatir la difusión de desinformaciones en WhatsApp durante estas elecciones.
+
+    Este pedido ya fue sumado a los temas que trata la redacción. Trataremos de avisarte en las próximas 24 horas, pero por favor tené en cuenta que por el volumen de pedidos que estamos teniendo quizás no llegaremos a chequear lo que nos pediste.
+  custom_message_smooch_bot_message_type_unsupported_reverso: Perdonanos, pero por
+    ahora no podemos chequear este tipo de archivos porque es imposible verificar
+    la validez o falsedad con las técnicas que utilizamos en nuestro método de verificación.
+  custom_message_smooch_bot_message_unconfirmed_reverso: Si no respondiste con 1,
+    va a ser difícil que la Redacción tome tu pedido. Gracias por escribirno.
+  custom_message_smooch_bot_not_final_reverso: Disculpas. El mensaje que nos enviaste
+    fue incorrectamente tratado como %{status}. Corregiremos nuestro error y recibirás
+    pronto el reporte correcto.
+  custom_message_smooch_bot_meme_reverso: "Acá te enviamos un Meme que creamos, basado
+    en el tema de tu consulta que ya verificamos. \nVer más en: %{url}"
+  custom_message_smooch_bot_window_closing_reverso: El volumen de pedidos a nuestra
+    redacción es enorme, por lo que aún no podemos resolver tu consulta. Gracias por
+    escribirnos.
