--- a/config/locales/te.yml
+++ b/config/locales/te.yml
@@ -81,3 +81,12 @@ te:
     మీరు పంపిన మెస్సెజ్ %{status}అని తప్పుగా మార్క్ చేయబడినది. మీ మెస్సెజ్ ఇంకా మా
     క్యూ-లైన్ లొ వెరిఫికేషన్ కొరకు ఉంచబడినది.  "
   custom_message_smooch_bot_ask_for_tos_checkpoint: ''
+  custom_message_smooch_bot_result_reverso: ''
+  custom_message_smooch_bot_result_changed_reverso: ''
+  custom_message_smooch_bot_ask_for_confirmation_reverso: ''
+  custom_message_smooch_bot_message_confirmed_reverso: ''
+  custom_message_smooch_bot_message_type_unsupported_reverso: ''
+  custom_message_smooch_bot_message_unconfirmed_reverso: ''
+  custom_message_smooch_bot_not_final_reverso: ''
+  custom_message_smooch_bot_meme_reverso: ''
+  custom_message_smooch_bot_window_closing_reverso: ''
