--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -573,10 +573,7 @@ en:
   smooch_bot_tos: |-
     Thanks for reaching out to Check Message!
 
-    You can use this service to request verification, fact-checks, and investigation of news and information.
-    Check Message is provided to you under these Terms of Service: %{tos}.
-    By continuing to use this service, *you agree to be bound by these terms*.
-    You should discontinue your use of Check Message if you do not agree.
+    You can use this service to request verification, fact-checks, and investigation of news and information. Check Message is provided to you under these Terms of Service: %{tos}. By continuing to use this service, *you agree to be bound by these terms*. You should discontinue your use of Check Message if you do not agree.
   smooch_bot_window_closing: The volume of requests on this channel is very high,
     and we haven't been able to resolve your request yet. Thank you for your patience.
   smooch_bot_not_final: |-
