--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -566,10 +566,10 @@ ar:
     شكراً لإرسال هذا الطلب. هل تود أننا نتحقق من صحة محتواه ؟
 
     للاجابة نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي المحادثة.
-  smooch_bot_ask_for_tos: |-
-    يرجى قراءة  شروط الاستخدام %{tos}. هل تقبل كافة الشروط ؟
+  smooch_bot_tos: |-
+    شكرا للتواصل مع Check Message !
 
-    للاجابة نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي المحادثة.
+    يمكنك استخدام هذه الخدمة لطلب التحقق من الأخبار والمعلومات.Check Message متوفر لك بموجب شروط الخدمة : %{tos}. من خلال الاستمرار في استخدام هذه الخدمة ، *أنت توافق على الالتزام بهذه الشروط*. عليك التوقف عن استخدامك لـ Check Message إذا كنت لا توافق على ذلك.
   smooch_bot_window_closing: إن حجم الطلبات مرتفع للغاية ، ولم نتمكن من معالجة طلبك
     بعد. شكراً على الانتظار.
   smooch_bot_not_final: |-
