--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -566,7 +566,7 @@ ar:
     شكراً لإرسال هذا الطلب. هل تود أننا نتحقق من صحة محتواه ؟
 
     للاجابة نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي المحادثة.
-  smooch_bot_tos: |-
+  smooch_bot_ask_for_tos: |-
     شكرا للتواصل مع Check Message !
 
     يمكنك استخدام هذه الخدمة لطلب التحقق من الأخبار والمعلومات.Check Message متوفر لك بموجب شروط الخدمة : %{tos}. من خلال الاستمرار في استخدام هذه الخدمة ، *أنت توافق على الالتزام بهذه الشروط*. عليك التوقف عن استخدامك لـ Check Message إذا كنت لا توافق على ذلك.
@@ -680,6 +680,7 @@ ar:
   custom_message_smooch_bot_message_unconfirmed_caio-bot-garden-refactoring: شكراً
     لقد تجاهلت.
   custom_message_smooch_bot_disabled_caio: مع الأسف! ، هذا البوت معطل حاليا
+  custom_message_smooch_bot_ask_for_tos_check-message-demo: ''
   custom_message_smooch_bot_ask_for_confirmation_checkpoint: |-
     شكرا لإرسال هذه الرسالة.
 
@@ -719,3 +720,4 @@ ar:
   custom_message_smooch_bot_not_final_reverso: ''
   custom_message_smooch_bot_meme_reverso: ''
   custom_message_smooch_bot_window_closing_reverso: ''
+  custom_message_smooch_bot_ask_for_tos_reverso: ''
