--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -575,7 +575,7 @@ es:
     Gracias por enviar este mensaje. ¿Quieres que verifiquemos este contenido?
 
     Para decir sí, *por favor responde con 1*. Cualquier otra respuesta terminará con nuestra conversación.
-  smooch_bot_tos: |-
+  smooch_bot_ask_for_tos: |-
     ¡Gracias por comunicarse con Check Message!
 
     Puede utilizar este servicio para solicitar la verificación de hechos e investigación de noticias e información. Check Message se proporciona bajo de estos términos de servicio: %{tos}. Al continuar utilizando este servicio, *usted acepta estar sujeto a estos términos*. Debe dejar de usar Check Message si no está de acuerdo.
@@ -698,6 +698,7 @@ es:
     bien, no lo tomaremos en cuenta.
   custom_message_smooch_bot_disabled_caio: "¡Lo sentimos! Este bot está actualmente
     inhabilitado :( "
+  custom_message_smooch_bot_ask_for_tos_check-message-demo: ''
   custom_message_smooch_bot_ask_for_confirmation_checkpoint: |-
     Gracias por enviar este mensaje.
 
@@ -739,3 +740,4 @@ es:
   custom_message_smooch_bot_not_final_reverso: ''
   custom_message_smooch_bot_meme_reverso: ''
   custom_message_smooch_bot_window_closing_reverso: ''
+  custom_message_smooch_bot_ask_for_tos_reverso: ''
