--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -543,6 +543,7 @@ ru:
   custom_message_smooch_bot_message_unconfirmed_caio-bot-garden-refactoring: Ок, проигнорировано.
   custom_message_smooch_bot_disabled_caio: Ой! Извините, но сейчас этот бот недоступен
     :(
+  custom_message_smooch_bot_ask_for_tos_check-message-demo: ''
   custom_message_smooch_bot_ask_for_confirmation_checkpoint: |-
     Спасибо за ваше сообщение!
 
@@ -583,3 +584,4 @@ ru:
   custom_message_smooch_bot_not_final_reverso: ''
   custom_message_smooch_bot_meme_reverso: ''
   custom_message_smooch_bot_window_closing_reverso: ''
+  custom_message_smooch_bot_ask_for_tos_reverso: ''
