Update l10n + reinstate download en strings from Tx #7761

--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -51,11 +51,68 @@ hi:
   smooch_bot_result_changed: "[सत्यापन रिपोर्ट - सुधार] आपके द्वारा हमारे साथ साझा
     किया संदेश बदल गया है *%{previous_status}* से *%{status}* इसे निर्धारित करने के
     लिए हमने यहां पहल की है:%{url}"
+  custom_message_smooch_bot_result_afp-checamos: ''
+  custom_message_smooch_bot_result_changed_afp-checamos: ''
+  custom_message_smooch_bot_ask_for_confirmation_afp-checamos: ''
+  custom_message_smooch_bot_message_confirmed_afp-checamos: ''
+  custom_message_smooch_bot_message_type_unsupported_afp-checamos: ''
+  custom_message_smooch_bot_message_unconfirmed_afp-checamos: ''
+  custom_message_smooch_bot_not_final_afp-checamos: ''
+  custom_message_smooch_bot_meme_afp-checamos: ''
+  custom_message_smooch_bot_window_closing_afp-checamos: ''
+  custom_message_smooch_bot_ask_for_confirmation_africa-check: ''
+  custom_message_smooch_bot_message_confirmed_africa-check: ''
+  custom_message_smooch_bot_message_unconfirmed_africa-check: ''
+  custom_message_smooch_bot_window_closing_africa-check: ''
+  custom_message_smooch_bot_result_africa-check: ''
+  custom_message_smooch_bot_message_type_unsupported_africa-check: ''
+  custom_message_smooch_bot_not_final_africa-check: ''
+  custom_message_smooch_bot_meme_africa-check: ''
+  custom_message_smooch_bot_ask_for_tos_africa-check: ''
+  custom_message_smooch_bot_result_boom-factcheck: |
+    [वेरिफिकेशन रिपोर्ट]
+
+    आपने जो सामग्री साझा की थी उसे *%{status}* चिन्हित किया गया है.
+
+    यह हमारी जांच प्रणाली रही है: %{url}
+  custom_message_smooch_bot_message_type_unsupported_boom-factcheck: माफ़ करें, हम
+    व्हाट्सएप्प पर सीधे अपलोड किये गए ऑडियो और वीडियो फॉर्मेट को सत्यापित करने में
+    असमर्थ हैं.
+  custom_message_smooch_bot_meme_boom-factcheck: हमनें आपके निवेदन पर आधारित एक मीम
+    बनाया है जिसमें हमसे उक्त सामग्री को सत्यापित करने के लिए कहा गया था, अधिक जानने
+    के लिए इस लिंक पर जाएं %{url}
+  custom_message_smooch_bot_ask_for_tos_boom-factcheck: 'इस सेवा का इस्तेमाल आप सूचनाओं/समाचार
+    की पड़ताल, तथ्यों को सत्यापित करने और फ़ैक्ट चेक के निवेदन के लिए कर सकते हैं |
+    चेक मैसेज की सेवा आपको इन शर्तों के अंतर्गत उपलभ्ध है: %{tos}. यदि आप सेवा जारी
+    रखते हैं तो आप इन शर्तों से सहमत माने जाएंगे. यदि आप सहमत नहीं हैं तो चेक मैसेज
+    की सेवा समाप्त कर सकते हैं.
+
+'
+  custom_message_smooch_bot_ask_for_confirmation_boom-factcheck: |
+    इस निवेदन के लिए आपका धन्यवाद. क्या आप इस सामग्री को सत्यापित करना चाहते हैं?
+    हाँ कहने के लिए, *जवाब में 1 लिखें*. इसके अलावा कोई और जवाब इस सामग्री के बारे में हमारी  बातचित को रोक देगा.
+  custom_message_smooch_bot_message_confirmed_boom-factcheck: |
+    शुभकानाएं! आपकी आग्रह की गयी सामग्री सत्यापित होने के लिए तैयार है.
+
+    हम आपको इसका विवरण अगले 24 घंटों में भेजने का प्रयास करेंगे, पर ध्यान रखें की हम हर निवेदन को जवाब देने में शक्षम नहीं हैं.
+  custom_message_smooch_bot_message_unconfirmed_boom-factcheck: 1 न भेजने पर आपका
+    यह निवेदन यहीं समाप्त होता है. धन्यवाद.
+  custom_message_smooch_bot_not_final_boom-factcheck: |
+    वेरिफिकेशन रिपोर्ट - सुधार]
+
+     जो सामग्री आपने साझा की थी किसी गड़बड़ के चलते ग़लती से यह चिन्हित हो गयी है: *%{status}*
+
+    यह सामग्री अब भी जांच के अंतर्गत है.
+  custom_message_smooch_bot_window_closing_boom-factcheck: |2
+
+    इस प्रणाली में तथ्यों की जांच के निवेदन ज़्यादा होने के कारण आपके निवेदन का समाधान अब तक नहीं हो पाया है. आपके धैर्य के लिए धन्यवाद.
+  custom_message_smooch_bot_disabled_boom-factcheck: सन्देश भेजने के लिए धन्यवाद.
+    हम किसी भी तरह का सत्यापित विवरण भेजने में असमर्थ हैं क्योंकि यह योजना अब समाप्त
+    हो चुकी है.
   custom_message_smooch_bot_ask_for_confirmation_caio-bot-garden-refactoring: ''
   custom_message_smooch_bot_message_confirmed_caio-bot-garden-refactoring: ''
   custom_message_smooch_bot_message_unconfirmed_caio-bot-garden-refactoring: ''
   custom_message_smooch_bot_disabled_caio: ''
-  custom_message_smooch_bot_ask_for_tos_check-message-demo: ''
   custom_message_smooch_bot_ask_for_confirmation_checkpoint: इस संदेश को भेजने के
     लिए धन्यवाद। क्या आपको संदेह है कि यह भारतीय आम चुनाव 2019 से संबंधित गलत सूचना
     है? अगर आप हां करते हैं तो 1 लिखें। कुछ और लिखेंगे तो हम संपर्क जारी नहीं रख सकेंगे।
