--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -681,6 +681,37 @@ ro:
   smooch_requests_asc: Cel mai puțin solicitat
   smooch_requests_desc: Cel mai solicitat
   bot_request_url_invalid: URL-ul robotului nu este valid
+  custom_message_smooch_bot_result_afp-checamos: ''
+  custom_message_smooch_bot_result_changed_afp-checamos: ''
+  custom_message_smooch_bot_ask_for_confirmation_afp-checamos: ''
+  custom_message_smooch_bot_message_confirmed_afp-checamos: ''
+  custom_message_smooch_bot_message_type_unsupported_afp-checamos: ''
+  custom_message_smooch_bot_message_unconfirmed_afp-checamos: ''
+  custom_message_smooch_bot_not_final_afp-checamos: ''
+  custom_message_smooch_bot_meme_afp-checamos: ''
+  custom_message_smooch_bot_window_closing_afp-checamos: ''
+  custom_message_smooch_bot_ask_for_confirmation_africa-check: ''
+  custom_message_smooch_bot_message_confirmed_africa-check: ''
+  custom_message_smooch_bot_message_unconfirmed_africa-check: ''
+  custom_message_smooch_bot_window_closing_africa-check: ''
+  custom_message_smooch_bot_result_africa-check: ''
+  custom_message_smooch_bot_message_type_unsupported_africa-check: ''
+  custom_message_smooch_bot_not_final_africa-check: ''
+  custom_message_smooch_bot_meme_africa-check: ''
+  custom_message_smooch_bot_ask_for_tos_africa-check: ''
+  custom_message_smooch_bot_result_boom-factcheck: ''
+  custom_message_smooch_bot_message_type_unsupported_boom-factcheck: Ne pare rău,
+    momentan nu acceptăm mesajele video și audio încărcate direct pe WhatsApp.
+  custom_message_smooch_bot_meme_boom-factcheck: Iată un meme, pe care l-am creat
+    în baza elementului, pentru care ați solicitat verificarea. Aflați mai multe pe
+    %{url}.
+  custom_message_smooch_bot_ask_for_tos_boom-factcheck: ''
+  custom_message_smooch_bot_ask_for_confirmation_boom-factcheck: ''
+  custom_message_smooch_bot_message_confirmed_boom-factcheck: ''
+  custom_message_smooch_bot_message_unconfirmed_boom-factcheck: ''
+  custom_message_smooch_bot_not_final_boom-factcheck: ''
+  custom_message_smooch_bot_window_closing_boom-factcheck: ''
+  custom_message_smooch_bot_disabled_boom-factcheck: ''
   custom_message_smooch_bot_ask_for_confirmation_caio-bot-garden-refactoring: Rugăm
     să confirmați cu ”1”.
   custom_message_smooch_bot_message_confirmed_caio-bot-garden-refactoring: Mulțumim!
@@ -688,7 +719,6 @@ ro:
   custom_message_smooch_bot_message_unconfirmed_caio-bot-garden-refactoring: Ok, ignorăm.
   custom_message_smooch_bot_disabled_caio: Vai! ne pare rău! Acest robot acum este
     deactivat :(
-  custom_message_smooch_bot_ask_for_tos_check-message-demo: ''
   custom_message_smooch_bot_ask_for_confirmation_checkpoint: |-
     Vă mulțumim pentru că ați transmis acest mesaj.
 
