--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -497,12 +497,12 @@ fr:
       unassign_by: Affectation annulée par
       project_button: Ouvrir la page du projet
     request_to_join:
-      subject: Demander à joindre %{team}
+      subject: Demande de joindre %{team}
       team_page: page de l'équipe
       team_button: Ouvrir la page de l'équipe
       rejected_subject: Votre demande de vous joindre à %{team} n'a pas été approuvée
       approved_subject: Bienvenue sur %{team}
-      request_title: Demander à joindre %{team}
+      request_title: Demande de joindre %{team}
       request_text: "%{name} (%{email}) demande à se joindre à %{team} sur %{app_name}.
         Vous pouvez traiter cette demande à %{url}."
       approved_title: Bienvenue sur l'équipe %{team}
@@ -701,6 +701,34 @@ fr:
   smooch_twitter_success: Succès ! À présent, les DM reçus par ce compte Twitter seront
     gérés par le bot Smooch.
   invalid_task_answer: Désolé, le format de cette réponse n'est pas valide
+  custom_message_smooch_bot_result_afp-checamos: ''
+  custom_message_smooch_bot_result_changed_afp-checamos: ''
+  custom_message_smooch_bot_ask_for_confirmation_afp-checamos: ''
+  custom_message_smooch_bot_message_confirmed_afp-checamos: ''
+  custom_message_smooch_bot_message_type_unsupported_afp-checamos: ''
+  custom_message_smooch_bot_message_unconfirmed_afp-checamos: ''
+  custom_message_smooch_bot_not_final_afp-checamos: ''
+  custom_message_smooch_bot_meme_afp-checamos: ''
+  custom_message_smooch_bot_window_closing_afp-checamos: ''
+  custom_message_smooch_bot_ask_for_confirmation_africa-check: ''
+  custom_message_smooch_bot_message_confirmed_africa-check: ''
+  custom_message_smooch_bot_message_unconfirmed_africa-check: ''
+  custom_message_smooch_bot_window_closing_africa-check: ''
+  custom_message_smooch_bot_result_africa-check: ''
+  custom_message_smooch_bot_message_type_unsupported_africa-check: ''
+  custom_message_smooch_bot_not_final_africa-check: ''
+  custom_message_smooch_bot_meme_africa-check: ''
+  custom_message_smooch_bot_ask_for_tos_africa-check: ''
+  custom_message_smooch_bot_result_boom-factcheck: ''
+  custom_message_smooch_bot_message_type_unsupported_boom-factcheck: ''
+  custom_message_smooch_bot_meme_boom-factcheck: ''
+  custom_message_smooch_bot_ask_for_tos_boom-factcheck: ''
+  custom_message_smooch_bot_ask_for_confirmation_boom-factcheck: ''
+  custom_message_smooch_bot_message_confirmed_boom-factcheck: ''
+  custom_message_smooch_bot_message_unconfirmed_boom-factcheck: ''
+  custom_message_smooch_bot_not_final_boom-factcheck: ''
+  custom_message_smooch_bot_window_closing_boom-factcheck: ''
+  custom_message_smooch_bot_disabled_boom-factcheck: ''
   custom_message_smooch_bot_ask_for_confirmation_caio-bot-garden-refactoring: Please
     confirm with "1".
   custom_message_smooch_bot_message_confirmed_caio-bot-garden-refactoring: Thanks,
@@ -708,7 +736,6 @@ fr:
   custom_message_smooch_bot_message_unconfirmed_caio-bot-garden-refactoring: Ok, ignored.
   custom_message_smooch_bot_disabled_caio: Uh-oh! Sorry, but this bot is currently
     disabled :(
-  custom_message_smooch_bot_ask_for_tos_check-message-demo: ''
   custom_message_smooch_bot_ask_for_confirmation_checkpoint: |-
     Merci de nous envoyer ce message.
 
